Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13403

‘lfs mirror extend’ should not require the mirror-count option

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.12.3, Lustre 2.14.0
    • 3
    • 9223372036854775807

      The Lustre manual states for ‘lfs mirror extend’

      The mirror_count argument is optional and defaults to 1 if it is not specified; …
      

      In Lustre 2.12.3 and master, the mirror-count option is required

      # cp test-framework.sh /mnt/lustre/.
      # lfs getstripe /mnt/lustre/test-framework.sh
      /mnt/lustre/test-framework.sh
      lmm_stripe_count:  1
      lmm_stripe_size:   1048576
      lmm_pattern:       raid0
      lmm_layout_gen:    0
      lmm_stripe_offset: 1
          obdidx         objid         objid         group
               1                 3              0x3                 0
      
      # lfs mirror extend -c -1  /mnt/lustre/test-framework.sh
      error: lfs mirror extend: --mirror-count|-N option is required
      

      We should make ‘lfs mirror’ easier to use and use a default value for the mirror count is one is not provided on the command-line.

            fdilger Fred Dilger
            jamesanunez James Nunez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: